--- a/experience.html
+++ b/experience.html
@@ -24,14 +24,14 @@
       <div class="card">
         <h2 class="card-title">Education</h2>
         <ul>
-         <h3><p><li> Miami Dade College</li></p></h3>
-         <h3><p><li> Universidad Mayor School of Architecture</li></p></h3>
-         <h3><p><li>Team Treehouse Front End Web Developer</li></p></h3>
+         <li> Miami Dade College</li>
+         <li> Universidad Mayor School of Architecture</li>
+         <li>Team Treehouse Front End Web Developer</li>
         </ul>
       </div> 
       <div class="card">
         <h2>skills</h2>
-        <h3><p>I have exprerience using Adobe Suite Apps such as</p></h3>
+        <p>I have exprerience using Adobe Suite Apps such as</p>
         <ul class="skills">
           <li>Photoshop</li>
           <li>Lightroom</li>
