--- a/experience.html
+++ b/experience.html
@@ -24,14 +24,14 @@
       <div class="card">
         <h2 class="card-title">Education</h2>
         <ul>
-         <li> Miami Dade College</li>
-         <li> Universidad Mayor School of Architecture</li>
-         <li>Team Treehouse Front End Web Developer</li>
+         <li><b>Miami Dade College</b></li>
+         <li><b>Universidad Mayor School of Architecture</b></li>
+         <li><b>Team Treehouse Front End Web Developer</b></li>
         </ul>
       </div> 
       <div class="card">
         <h2>skills</h2>
-        <p>I have exprerience using Adobe Suite Apps such as</p>
+        <p><b>I have exprerience using Adobe Suite Apps such as</b></p>
         <ul class="skills">
           <li>Photoshop</li>
           <li>Lightroom</li>
