--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <main class="flex">
       <div class="card">
         <h2 class="card-title">Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I studied Architecture in College and I am a life-long learner who's always interested in expanding my skills.</p>
+        <p><b>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</b></p>
+        <p><b>I studied Architecture in College and I am a life-long learner who's always interested in expanding my skills.</b></p>
       </div> 
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p><b>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</b></p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
@@ -39,7 +39,7 @@
           <li>React</li>
           <li>Node.js</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p><b>I’d like to work for a web design firm helping clients create an impressive online presence.</b></p>
       </div> 
 
     </main>
