--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
     <main class="flex">
       <div class="card">
-        <h2 class="card-title">Background</h2>
-        <p><b>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</b></p>
+        <h2 class="card-title">About Me</h2>
+        <p><b>I’m a Web Developer in the making who loves everything about the web and computer science in general . I’m excited to bring my life experience to the process of building great looking websites.</b></p>
         <p><b>I studied Architecture in College and I am a life-long learner who's always interested in expanding my skills.</b></p>
       </div> 
 
       <div class="card">
         <h2>Goals</h2>
-        <p><b>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</b></p>
+        <p><b>I want to master the process of building web sites, become a Web Developer and get better at:</b></p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
@@ -39,7 +39,7 @@
           <li>React</li>
           <li>Node.js</li>
         </ul>
-        <p><b>I’d like to work for a web design firm helping clients create an impressive online presence.</b></p>
+        <p><b>My ultimate goal is to become a Full-Stack Developer</b></p>
       </div> 
 
     </main>
